--- a/src/components/experience/Experience.module.css
+++ b/src/components/experience/Experience.module.css
@@ -108,6 +108,8 @@
 
 .experienceDetails p{
     font-family: inherit;
+    line-height: 120%;
+    letter-spacing: -0.5px;
     font-size: 18px;
     font-weight: 300;
 }
@@ -116,7 +118,7 @@
     display: flex;
     flex-direction: column;
     font-weight: 0;
-    margin-top: 6px;
+    margin-top: 18px;
     list-style-position: inside;
     list-style: disc;
     font-size: 25px;
