--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,8 @@
 html {
   scroll-behavior: smooth;
 }
+
+img {
+  -webkit-filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.4));
+  filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.4));
+}
